--- a/src/App.css
+++ b/src/App.css
@@ -29,17 +29,21 @@ button:active {
 }
 
 .loader {
-  position: relative;
-  border:24px solid #FFF;
-  border-radius:50%;
-  transform: rotate(45deg);
-  animation: pieFill 3s linear infinite;
-}
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
 
-@keyframes pieFill {
-  0% , 19%{ border-color: #FFF #FFF #FFF #FFF }
-  20% , 39%{ border-color: #FF3D00 #FFF #FFF #FFF }
-  40% , 59%{ border-color: #FF3D00 #FF3D00 #FFF #FFF }
-  60% , 79%{ border-color: #FF3D00 #FF3D00 #FF3D00 #FFF }
-  80% , 100% { border-color: #FF3D00 #FF3D00 #FF3D00 #FF3D00 }
-}
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
